docker/k8s/deployment-mb-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-back
  labels:
    app: mb-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mb-back
  template:
    metadata:
      name: mb-back
      labels:
        app: mb-back
    spec:
      containers:
        - name: mb-back
          image: tlcfem/motion-base:back
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "1Gi"
              cpu: ".5"
      restartPolicy: Always
