docker/k8s/deployment-mb-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-storage
  labels:
    app: mb-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mb-storage
  template:
    metadata:
      name: mb-storage
      labels:
        app: mb-storage
    spec:
      volumes:
        - name: motion-rabbitmq
          emptyDir: { }
        - name: motion-elasticsearch
          emptyDir: { }
        - name: motion-mongo
          emptyDir: { }
        - name: motion-mongoconfig
          emptyDir: { }
        - name: motion-seaweedfs
          emptyDir: { }
      containers:
        - name: mb-rabbitmq
          image: rabbitmq
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          volumeMounts:
            - name: motion-rabbitmq
              mountPath: /var/lib/rabbitmq
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
              cpu: "0.5"
        - name: mb-elasticsearch
          image: elasticsearch:9.5.3
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
              protocol: TCP
          volumeMounts:
            - name: motion-elasticsearch
              mountPath: /usr/share/elasticsearch/data
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "4Gi"
              cpu: "0.5"
        - name: mb-mongo
          image: mongo
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: motion-mongo
              mountPath: /data/db
            - name: motion-mongoconfig
              mountPath: /data/configdb
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "4Gi"
              cpu: "1"
        - name: mb-seaweedfs
          image: chrislusf/seaweedfs
          imagePullPolicy: Always
          ports:
            - containerPort: 8333
              protocol: TCP
          volumeMounts:
            - name: motion-seaweedfs
              mountPath: /data
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "4Gi"
              cpu: "1"
      restartPolicy: Always
