docker/k8s/deployment-mb-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-worker
  labels:
    app: mb-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mb-worker
  template:
    metadata:
      name: mb-worker
      labels:
        app: mb-worker
    spec:
      containers:
        - name: mb-worker
          image: tlcfem/motion-base:back
          imagePullPolicy: Always
          args:
            - celery
          resources:
            limits:
              memory: "2Gi"
              cpu: ".5"
      restartPolicy: Always
