docker/k8s/mb-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-back
  labels:
    app: mb-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mb-back
  template:
    metadata:
      name: mb-back
      labels:
        app: mb-back
    spec:
      volumes:
        - name: motion-cache
          emptyDir: {}
      containers:
        - name: mb-back
          image: tlcfem/motion-base-back
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: motion-cache
              mountPath: /tmp
          resources:
            limits:
              memory: "512Mi"
              cpu: "2"
      restartPolicy: Always
