docker/k8s/mb-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-front
  labels:
    app: mb-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mb-front
  template:
    metadata:
      name: mb-front
      labels:
        app: mb-front
    spec:
      containers:
        - name: mb-front
          image: tlcfem/motion-base-front
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
