docker/k8s/mb-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mb-back-service
spec:
  selector:
    app: mb-back
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
