docker/k8s/service-mb-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: mb-storage-service
spec:
  selector:
    app: mb-storage
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-management
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: elasticsearch
      protocol: TCP
      port: 9200
      targetPort: 9200
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
    - name: seaweedfs
      protocol: TCP
      port: 8333
      targetPort: 8333
