docker/k8s/ingress-mb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mb-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mb-back-service
                port:
                  number: 8000
